--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 
 <script>
-const DATA_URL   = 'https://YOUR_N8N_HOST/webhook/available-mentors'; // ← change me
+const DATA_URL   = 'https://possible-automation1.app.n8n.cloud/webhook/available-mentors'; // ← change me
 const REFRESH_MS = 15000; // refresh every 15s
 
 const mount = document.getElementById('mount');
